--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "concurrently": "^4.1.2",
+    "cors-anywhere": "^0.4.1",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
@@ -25,7 +26,7 @@
     "morgan": "^1.9.1",
     "mysql2": "^1.7.0",
     "passport": "^0.4.0",
-    "passport-eveonline-sso": "^0.9.2",
+    "passport-eveonline-sso": "github:eve-scout/passport-eveonline-sso",
     "sequelize": "^5.19.0"
   }
 }
